meja/tests/type_variable_scoping.meja
let f : 'a -> 'b = fun (x : int) => {
  x;
};

let g : 'a -> 'b = fun (x : bool) => {
  x;
};

module X = {
  type t('a) = A('a) | B(int) | C(bool) : t(bool);

  let a : t('int) = A(15);

  let a1 : t('unit) = A(());

  let b : t('bool) = B(30i);

  let c : t('bool) = C(true);

  let f : 'int -> 'unit -> 'bool = fun (a : 'a, b : 'a) => {
    a;
  };
};
